# homework-temperature

./: Cargo.toml  README.md
.cargo/: config.toml
src/: init.rs  main.rs  setup.rs  utils.rs
